--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bloccitoff</title>
+  <title>Bloccit</title>
+  <meta name="viewport" content="width=device-width, intitial-scale=1"
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+    <div class="container">
+      <ul class="nav nav-tabs">
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "About", about_path %></li>
+      </ul>
+  <%= yield %>
+  </div>
 
 </body>
 </html>
