--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bloccit</title>
-  <meta name="viewport" content="width=device-width, intitial-scale=1"
+  <title>BloccitOff</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-    <div class="container">
-      <ul class="nav nav-tabs">
-          <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "About", about_path %></li>
-      </ul>
-  <%= yield %>
-  </div>
+    <%= render 'layouts/navigation' %>
+
+     <% if flash[:notice] %>
+       <div class="alert alert-success floater">
+         <button type="button" class="close" data-dismiss="alert">&times;</button>
+         <%= flash[:notice] %>
+       </div>
+     <% elsif flash[:error] %>
+       <div class="alert alert-danger floater">
+         <button type="button" class="close" data-dismiss="alert">&times;</button>
+         <%= flash[:error] %>
+       </div>
+     <% elsif flash[:alert] %>
+       <div class="alert alert-warning floater">
+         <button type="button" class="close" data-dismiss="alert">&times;</button>
+         <%= flash[:alert] %>
+       </div>
+     <% end %>
+
+<%= yield %>
 
 </body>
 </html>
