--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Bloccit</title>
-  <meta name="viewport" content="width=device-width, intitial-scale=1"
+  <meta name="viewport" content="width=device-width, intitial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -13,15 +13,23 @@
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "About", about_path %></li>
 
-          <div class="jumbotron">
-          <h1>Bloccitoff</h1>
-  <p>A Project App.</p>
-  <p>
-      <a class="btn btn-primary" href="/users/sign_in">Sign In</a> or
-      <a class="btn btn-primary" href="/users/sign_up">Sign Up</a> today!
-  </p>
-</div>
-      </ul>
+         <div class="pull-right user-info">
+           <% if current_user %>
+             Hello <%= current_user.email %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+           <% else %>
+             <%= link_to "Sign In", new_user_session_path %> or
+             <%= link_to "Sign Up", new_user_registration_path %>
+           <% end %>
+         </div>
+       <div class="jumbotron">
+         <h1>Bloccitoff</h1>
+         <p>Your New To-Do List App.</p>
+       <p>
+       <a class="btn btn-primary" href="/users/sign_in">Sign In</a> or
+       <a class="btn btn-primary" href="/users/sign_up">Sign Up</a>
+       </p>
+       </div>
+    </ul>
   <%= yield %>
   </div>
 
