Home page styling changes, still not receiving confirmation email

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,24 +1,24 @@
 <br>
 <div class="jumbotron">
   <h1>Bloccitoff</h1>
-  <p>Your New To Do List</p>
+  <p>Your New To-Do List</p>
   <p>
       <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
-      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> now!
   </p>
 </div>
 
 <div class="row">
   <div class="col-md-4">
-    <h2>Solves world hunger</h2>
+    <h2>Benefit 1</h2>
     <p>Bloccitoff will deliver food and water to those in need, all over the world.</p>
   </div>
   <div class="col-md-4">
-    <h2>Eliminates poverty</h2>
+    <h2>Benefit 2</h2>
     <p>Bloccitoff will deliver money and education to those in need, all over the world.</p>
   </div>
   <div class="col-md-4">
-    <h2>Makes you better looking</h2>
+    <h2>Benefit 3</h2>
     <p>Bloccitoff will make you better looking: it's scientifically proven to make men look like Ryan Gosling and women look like Shakira.</p>
   </div>
 </div>
