Trying to understand Devise Mailer files

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,4 +1,4 @@
 <h1>About Bloccitoff</h1>
-<p>Created by: Matt</p>
+<p>Created by: Matt Pagan</p>
 
 <%= link_to "Matt Pagan", "http://popsmoke.net/", class: "social-btn" %>
