--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,21 +4,29 @@
   <p>Your New To-Do List</p>
   <p>
       <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
-      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> now!
+      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %>
   </p>
 </div>
 
 <div class="row">
   <div class="col-md-4">
-    <h2>Benefit 1</h2>
-    <p>Bloccitoff will deliver food and water to those in need, all over the world.</p>
+    <h2>Task 1</h2>
+    <p>Sign a new user up. Do you receive a confirmation email?
+
+</p>
   </div>
   <div class="col-md-4">
-    <h2>Benefit 2</h2>
-    <p>Bloccitoff will deliver money and education to those in need, all over the world.</p>
+    <h2>Task 2</h2>
+    <p>What happens if you attempt to sign up with an invalid email?</p>
   </div>
   <div class="col-md-4">
-    <h2>Benefit 3</h2>
-    <p>Bloccitoff will make you better looking: it's scientifically proven to make men look like Ryan Gosling and women look like Shakira.</p>
+    <h2>Task 3</h2>
+    <p>What happens if you attempt to sign up with a duplicate email?</p>
+  </div>
+  <div class="col-md-4">
+    <h2>Next Checkpoint</h2>
+    <li>Sign into Blocitoff, does the top navigation change to indicate you are signed in?</li>
+    <li>Sign out of Blocitoff, does the top navigation change to indicate you are signed out?</li>
+    <li>What happens if you attempt to reset your password?</li></p>
   </div>
 </div>
