--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,29 +11,54 @@
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
+ <div class="form-group">
+        <%= f.label :password %>
+        <%= f.password_field :password, class: 'form-control', placeholder: "Enter password" %>
+        <i>(leave blank if you don't want to change it)</i>
+      </div>
+      <div class="form-group">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter password confirmation" %>
+      </div>
+      <div class="form-group">
+        <%= f.password_field :current_password, class: 'form-control', placeholder: "Enter password" %>
+        <i>(we need your current password to confirm your changes)</i>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Update", class: 'btn btn-success' %>
+      </div>
+    <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <h3>Edit personal information</h3>
+    <%= form_for(current_user) do |f| %>
+      <div class="form-group">
+        <%= f.label :name %>
+        <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
+      </div>
+      <% if current_user.avatar? %>
+        <div class="form-group">
+          <p>Current avatar</p>
+          <%= image_tag( current_user.avatar.profile.url ) %>
+        </div>
+      <% end %>
+      <div class="form-group">
+         <%= f.label :avatar %>
+         <%= f.file_field :avatar %>
+         <%= f.hidden_field :avatar_cache %>
+      </div>
+      <div class="form-group">
+         <%= f.label :email_favorites %>
+         <%= f.check_box :email_favorites %>
+         <p class="help-block">Be notified for new comments on your favorites</p>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Update", class: 'btn btn-success' %>
+      </div>
+    <% end %>
+
+    <h3>Cancel my account</h3>
+    <div class="form-group">
+        <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
