--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,11 +2,11 @@
 <div class="jumbotron">
   <h1>Bloccitoff</h1>
   <p>Your New To-Do List</p>
-  <p>
+  <% unless current_user %>
       <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
       <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %>
-  </p>
-</div>
+      <% end %>
+   </div>
 
 <div class="row">
   <div class="col-md-4">
