--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,33 +1,34 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
- <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control', placeholder: "Enter password" %>
-        <i>(leave blank if you don't want to change it)</i>
-      </div>
+<div class="row">
+  <div class="col-md-8">
+    <h3>Change email or password</h3>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :patch }) do |f| %>
+      <%= devise_error_messages! %>
       <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter password confirmation" %>
+        <%= f.label :email %>
+        <%= f.email_field :email, class: 'form-control', placeholder: "Enter email" %>
       </div>
-      <div class="form-group">
-        <%= f.password_field :current_password, class: 'form-control', placeholder: "Enter password" %>
-        <i>(we need your current password to confirm your changes)</i>
-      </div>
-      <div class="form-group">
-        <%= f.submit "Update", class: 'btn btn-success' %>
-      </div>
-    <% end %>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
+     <div class="form-group">
+            <%= f.label :password %>
+            <%= f.password_field :password, class: 'form-control', placeholder: "Enter password" %>
+            <i>(leave blank if you don't want to change it)</i>
+          </div>
+          <div class="form-group">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Enter password confirmation" %>
+          </div>
+          <div class="form-group">
+            <%= f.password_field :current_password, class: 'form-control', placeholder: "Enter password" %>
+            <i>(we need your current password to confirm your changes)</i>
+          </div>
+          <div class="form-group">
+            <%= f.submit "Update", class: 'btn btn-success' %>
+          </div>
+        <% end %>
 
     <h3>Edit personal information</h3>
     <%= form_for(current_user) do |f| %>
