--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,11 @@
 <% if current_user %>
-  <div class="row">
     <div class="col-md-3">
     </div>
+    <p></p>
     <div class="col-md-6">
-      Welcome <%= current_user.name %>!
+    <p>Welcome <%= current_user.name %>!</p>
+    </div>
+    <div class="container-fluid"> 
       <table class="table table-striped">
         <tr>
           <th> Description </th>
@@ -11,8 +13,12 @@
           <th> Complete </th>
         </tr>
       </table>
+      <div class="row">
+          <div class="col-md-4">.col-md-4</div>
+          <div class="col-md-4">.col-md-4</div>
+          <div class="col-md-4">.col-md-4</div>
       </div>
     </div>
 <% else %>
-   <%= render partial: "users/welcome" %> 
+   <%= render partial: "users/welcome" %>
 <% end %>
