--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,9 +14,33 @@
         </tr>
       </table>
       <div class="row">
-          <div class="col-md-4">.col-md-4</div>
-          <div class="col-md-4">.col-md-4</div>
-          <div class="col-md-4">.col-md-4</div>
+          <% if @user_items.count < 1 %>
+        <div class="text-center">
+          <h3 class="lead no-items-helper">Make your first to-do below</h3>
+        </div>
+      <% end %>
+      <div class="js-items text-center">
+        <% @user_items.each do |item| %>
+          <%= render partial: 'items/item', locals: { item: item } %>
+        <% end %>
+      </div>
+      <div class="text-center">
+        <div class="new_item item">
+          <%= render partial: 'items/form', locals: {item: Item.new } %>
+        </div>
+        <br>
+        <div class="information">
+          <small><i>
+            <span class="glyphicon glyphicon-exclamation-sign"></span>
+            Items longer than 40 characters will not post to your list.
+          </i>
+          </small>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+    </div>
+  </div>
       </div>
     </div>
 <% else %>
