--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.btn-to-do {
+    width: 100%;
+    color: #FFF;
+    font-size: 20px;
+    line-height: 2em;
+    background-color: #6AB388;
+}
