--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -12,6 +12,8 @@
     <%= f.text_field :name, class: 'form-control inliner', placeholder: "Enter your to-do and click 'Create To-do'" %>
   <% end %>
   <div class="form-group">
-    <%= f.submit "Create To-do", class: 'btn hidden-button' %>
+    <div class="btn-to-do-text">
+    <%= f.submit "Create To-do", class: 'btn-to-do' %>
+    </div>
   </div>
 <% end %>
