More practice with CSS/Bootstrap, trying to get new to-do to show without refreshing the page

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -9,10 +9,10 @@
     </ul>
 <% end %>
   <%= form_group_tag(item.errors[:name]) do %>
-    <%= f.text_field :name, class: 'form-control inliner', placeholder: "Enter your to-do and click 'Create To-do'" %>
+    <%= f.text_field :name, class: 'form-control', placeholder: "Enter your to-do and click 'Create To-do'" %>
   <% end %>
   <div class="form-group">
-    <div class="btn-to-do-text">
+    <div class="btn-to-do">
     <%= f.submit "Create To-do", class: 'btn-to-do' %>
     </div>
   </div>
