--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
  .user-info {
    margin-top: 9px;
@@ -55,4 +56,14 @@
     line-height: 1.42857143;
     border-radius: 4px;
     -webkit-user-select: none;
+}
+.to-do-container {
+    width: 700px;
+    margin: 0 auto;
+    background-color: #9932CC;
+    color: #FFF;
+    margin: 18px;
+}
+.align-right {
+    float: right;
 }
