--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
 <body>
     <div class="container">
       <%= render partial: 'layouts/navigation' %>
-
+      
+      <div class="alert-phantom"></div>
+      
       <% if flash[:notice] %>
         <div class="alert alert-success">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <%= flash[:notice] %>
-      </div>
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <%= flash[:notice] %>
+        </div>
     <% elsif flash[:error] %>
       <div class="alert alert-danger">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
