--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, class: 'item', id: "item-#{item.id}" do %>
-  <div class="to-do-container"><%= item.name %></div>
+  <div class="to-do-container"><h3 class="item-name"><%= item.name %></h3></div>
   <div class="align-right">
   <%= link_to [item], method: :delete, class: 'align-right', remote: true do %>
     <span class="glyphicon glyphicon-ok-sign"></span>
