--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<ul class="nav nav-tabs">
+<ul class="nav nav-tabs nav-alert">
     <li><%= link_to "Home", root_path %></li>
     <li><%= link_to "About", about_path %></li>
 
