--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <% if current_user %>
-    <p>Welcome <%= current_user.name %>!</p>
+    <h2 class="welcome-name">Welcome, <%= current_user.name %>!</h2>
 
     <div class="container-fluid">
       <div class="to-do-container">
