--- a/app/views/items/create.js.erb
+++ b/app/views/items/create.js.erb
@@ -4,5 +4,5 @@
    $('.alert-phantom').append('<div class="alert alert-success"><button type="button" class="close" data-dismiss="alert">&times;</button><%= flash[:info] = "Awesome, job creating your to-do." %></div>');
 <% else %>
    $('.new-item').html("<%= escape_javascript(render partial: 'items/form', locals: { item: Item.new }) %>");
-   $('.alert-phantom').append('<div class="alert alert-danger"><button type="button" class="close" data-dismiss="alert">&times;</button><%= flash[:info] = "Sorry there was an error creating your	 to-do." %></div>');
+   $('.alert-phantom').append('<div class="alert alert-danger"><button type="button" class="close" data-dismiss="alert">&times;</button><%= flash[:info] = "Sorry, there was an error creating your	to-do." %></div>');
 <% end %>
