--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -11,10 +11,14 @@
 }
 
 .item-name {
-	color: #FFF;
+    color: #FFF;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    border-bottom: 1px solid #9FA09E;
 }
 
 .glyphicon {
     color: #fff;
     margin-right: 20px;
+    top: -12px !important;
 }
