UI / Styling Changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,7 +43,7 @@
 }
 .btn-primary {
     color: #fff;
-    background-color: #FF0000;
+    background-color: #9932CC;
     border-color: #333;
 }
 .btn {
@@ -55,9 +55,9 @@
     touch-action: manipulation;
     cursor: pointer;
     background-image: none;
-    border: 1px solid transparent;
+    border: 2px solid transparent;
     white-space: nowrap;
-    padding: 6px 12px;
+    padding: 1px 6px;
     font-size: 14px;
     line-height: 1.42857143;
     border-radius: 4px;
