--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -14,11 +14,11 @@
     color: #FFF;
     padding-top: 18px;
     padding-bottom: 18px;
+    margin-bottom: -10px;
     border-bottom: 1px solid #9FA09E;
 }
 
 .glyphicon {
     color: #fff;
     margin-right: 20px;
-    top: -12px !important;
 }
