Delete Expired To-Do Items, Completed

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,4 +1,4 @@
-g<%= content_tag :div, class: 'item', id: "item-#{item.id}" do %>
+<%= content_tag :div, class: 'item', id: "item-#{item.id}" do %>
   <div class="to-do-container"><h4 class="item-name"><%= item.name %></h4></div>
   <div class="align-right">
 	  <%= link_to [item], method: :delete, class: 'align-right', remote: true do %>
